--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+.npmrc
+src/firebase.js
+.firebaserc
+firebase.json
