--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"svelte": "^3.54.0",
+		"svelte-adapter-firebase": "^0.15.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^9.18.0"
+	}
 }
